--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
   <body>
     <div id="content"></div>
     <script type="text/jsx">
+
+      /* This is our Comment Box component*/
+      var CommentBox = React.createClass({
+        render: function() {
+          return (
+            <div className="commentBox">
+              Hello, I am a Comment Box
+            </div>
+          );
+        }
+      });
+
+      /* This is how the component renders to screen */
+      React.render(<CommentBox />, document.getElementById("content"));
+
     </script>
   </body>
 </html>
