Step 3-added CommentList and CommentForm

--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
         render: function() {
           return (
             <div className="commentBox">
-              Hello, I am a Comment Box
+              <h1>Comments</h1>
+              <CommentList />
+              <CommentForm />
+            </div>
+          );
+        }
+      });
+
+      /* This is our Comment List component*/
+      var CommentList = React.createClass({
+        render: function() {
+          return (
+            <div className="commentList">
+              Hello, I am a Comment List
+            </div>
+          );
+        }
+      });
+
+      /* This is our Comment Form component*/
+      var CommentForm = React.createClass({
+        render: function() {
+          return (
+            <div className="commentForm">
+              Hello, I am a Comment Form
             </div>
           );
         }
