--- a/index.html
+++ b/index.html
@@ -11,28 +11,56 @@
     <div id="content"></div>
     <script type="text/jsx">
 
+      /* This is out static data*/
+      var staticData = [
+        {
+          author: "Jack",
+          text: "Hello John"
+        },
+        {
+          author: "John",
+          text: "Hello Jack"
+        }
+      ];
+
       /* This is our Comment Box component*/
       var CommentBox = React.createClass({
+
+        /* set our initial state */
+        getInitialState: function(){
+          return {
+            data: staticData
+          };
+        },
+
         render: function() {
           return (
             <div className="commentBox">
               <h1>Comments</h1>
-              <CommentList />
+              <CommentList data={this.state.data}/>
               <CommentForm />
             </div>
           );
         }
+
       });
 
       /* This is our Comment List component*/
       var CommentList = React.createClass({
         render: function() {
+
+          /* Creating a list of comments */
+          var commentNodes = this.props.data.map(function(comment){
+              return <Comment author={comment.author}>{comment.text}</Comment>
+            });
+
+          /* Return the list */
           return (
             <div className="commentList">
-              <Comment author="Jack">Hello John</Comment>
-              <Comment author="John">Hello Jack</Comment>
+              {commentNodes}
             </div>
           );
+          
         }
       });
 
